--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ```{r, echo=FALSE}
-cat("# rCNV <img src='inst/gSoup_logo.png' align='right' height='139' />")
+cat("# gSoup <img src='inst/gSoup_logo.png' align='right' height='139' />")
 ```
 
 ## gSoup: An R package to perform various genetic analyses
